syntax = "proto3";

package resources.wiki;

import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/wiki;wiki";

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  ACCESS_LEVEL_BLOCKED = 1;
  ACCESS_LEVEL_VIEW = 2;
  ACCESS_LEVEL_ACCESS = 3;
  ACCESS_LEVEL_EDIT = 4;
  ACCESS_LEVEL_OWNER = 5;
}

message PageAccess {
  repeated PageJobAccess jobs = 1 [(validate.rules).repeated.max_items = 20]; // @gotags: alias:"job_access"
  repeated PageUserAccess users = 2 [(validate.rules).repeated.max_items = 20]; // @gotags: alias:"user_access"
}

message PageJobAccess {
  uint64 id = 1 [jstype = JS_STRING];
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 page_id = 3 [jstype = JS_STRING];
  string job = 4 [(validate.rules).string.max_len = 20];
  optional string job_label = 5 [(validate.rules).string.max_len = 50];
  int32 minimum_grade = 6 [(validate.rules).int32.gte = 0];
  optional string job_grade_label = 7 [(validate.rules).string.max_len = 50];
  AccessLevel access = 8 [(validate.rules).enum.defined_only = true];
}

message PageUserAccess {
  uint64 id = 1 [jstype = JS_STRING];
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 page_id = 3 [jstype = JS_STRING];
  int32 user_id = 4 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort user = 5;
  AccessLevel access = 6 [(validate.rules).enum.defined_only = true];
}
